--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,28 @@
-<h1>navbar</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quae vero
-  sapiente aperiam fuga. Aspernatur, enim cumque vitae voluptas reprehenderit,
-  rem ducimus, architecto officiis exercitationem deserunt saepe doloribus error
-  repellat!</p>
+<nav class="navbar navbar-expand-lg py-4 navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+       <img src="https://th.bing.com/th/id/OIP.g3QT8LdHsQRA02q-LYh4oQHaHa?pid=ImgDet&w=221&h=221&c=7&dpr=1.25" alt="" width="40" height="40" style="border-radius: 50%;">
+      Kosle Technical Solutions</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+       
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      
+    </div>
+  </div>
+</nav>
