--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,9 +1,11 @@
 
-<nav class="navbar navbar-expand-lg py-4 navbar-dark bg-success border-bottom ">
+<nav class="navbar navbar-expand-lg py-4 navbar-light bg-light border-bottom ">
   <div class="container">
     <a class="navbar-brand" href="#">
-       <img src="https://t4.ftcdn.net/jpg/03/28/54/21/360_F_328542178_YotgB5sGePl9SzsChnn66W4xVMCvC3hb.jpg" alt="company logo logo" width="40" height="40" style="border-radius: 50%;">
-      Kosle Technical Solutions</a>
+       <img src="{{data.brandIconUrl}}" alt="company logo logo" width="40" height="40" style="border-radius: 50%;">
+      {{data.brandName}}</a>
+       {{!-- <img src="https://t4.ftcdn.net/jpg/03/28/54/21/360_F_328542178_YotgB5sGePl9SzsChnn66W4xVMCvC3hb.jpg" alt="company logo logo" width="40" height="40" style="border-radius: 50%;">
+      Kosle Technical Solutions</a> --}}
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 border-bottom">
   <div class="container">
@@ -19,19 +21,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+{{#each data.links}}
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="{{this.url}}">{{this.label}}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-       
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+       {{/each}}
+        
       </ul>
       
     </div>
