--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,24 +1,92 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <title>Dynamic website !!</title>
-      <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <link rel="stylesheet" href="/static/css/style.css">
-  </head>
-  <body>
-     {{!-- <h1>This is home page</h1> --}}
-   {{>navbar data = details}}
+  {{!-- font awesome cdn --}}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  {{!-- font awesome cdn --}}
+</head>
 
-   {{>slider sliders=sliders}}
+<body>
+  {{!-- <h1>This is home page</h1> --}}
+  {{>navbar data = details}}
 
-  </body>
+  {{>slider sliders=sliders}}
+
+  {{!-- services section --}}
+  <section id="services_section">
+    <div class="container py-3">
+      <h1 class="text-center text-secondary">Servicess We Provide</h1>
+      <div class="row mt-3">
+        {{#each services}}
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <div class="container text-center py-3">
+                <i class="{{this.icon}} service_icon text-secondary" style="font-size: 90px;"></i>
+              </div>
+              <h3 class="card-title">{{this.title}}</h3>
+              <p>{{this.description}}</p>
+              <a href="{{this.link}}">check</a>
+              <a href="{{this.linkText}}">Support</a>
+            </div>
+          </div>
+        </div>
+        {{/each}}
+      </div>
+    </div>
+  </section>
+  {{!-- servicess section end --}}
+
+  {{!-- contact us section --}}
+
+  <section id="contact_us_section" class="bg-dark text-white">
+    <div class="container">
+      <h3 class="text-center text-secondary">Contact Us</h3>
+      <div class="row">
+        <div class="col-md-12">
+
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email Address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+
+            <div class="mb-3">
+              <label for="contact_number" class="form-label">Your contact number</label>
+              <input type="number" class="form-control" id="contact_number" name="contact">
+            </div>
+
+            <div class="form-floating my-2 text-dark">
+              <textarea style="height:150px" class="form-control" placeholder="Enter your query here" id="queryField"></textarea>
+              <label for="queryField">Query here</label>
+            </div>
+
+            <div class="text-center py-2">
+              <button type="submit" class="btn btn-secondary">Submit</button>
+            </div>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  {{!-- contact us section --}}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+
+</body>
+
 </html>
