--- a/views/partials/slider.hbs
+++ b/views/partials/slider.hbs
@@ -1,64 +1,31 @@
-<div
-  id="carouselExampleIndicators"
-  class="carousel slide carousel-fade"
-  data-bs-ride="carousel"
->
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
   <div class="carousel-indicators">
     {{#each sliders}}
-    <button
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide-to="{{@index}}"
-      class="{{this.class}}"
-      aria-current="true"
-      aria-label="Slide 1"
-    ></button>
-    {{/each}}
-    {{!-- <button
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide-to="1"
-      aria-label="Slide 2"
-    ></button>
-    <button
-      type="button"
-      data-bs-target="#carouselExampleIndicators"
-      data-bs-slide-to="2"
-      aria-label="Slide 3"
-    ></button> --}}
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{@index}}" class="{{this.class}}" aria-current="true" aria-label="Slide 1"></button>
+   {{/each}}
+    {{!-- <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button> --}}
   </div>
   <div class="carousel-inner">
     {{#each sliders}}
-      <div class="carousel-item {{this.class}}">
-        <img
-          {{!-- src="/static/images/img5.jpg" --}}
-          src="{{this.image_url}}"
-          class="d-block w-100 slider-image"
-          alt="..."
-        />
-        <div class="carousel-caption d-none d-md-block">
-          <h1>{{this.title}}</h1>
-          <p>{{this.sub_title}}</p>
-        </div>
+    <div class="carousel-item active">
+      <img src="{{this.image_url}}" class="d-block w-100  slider-image" style=" height: 600px !important;
+  object-fit: cover;" alt="img-crousel">
+      <div class="carousel-caption d-none d-md-block">
+        <h1>{{this.title}}</h1>
+        <p>{{this.sub_title}}</p>
       </div>
+    </div>
     {{/each}}
   </div>
-  <button
-    class="carousel-control-prev"
-    type="button"
-    data-bs-target="#carouselExampleIndicators"
-    data-bs-slide="prev"
-  >
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button
-    class="carousel-control-next"
-    type="button"
-    data-bs-target="#carouselExampleIndicators"
-    data-bs-slide="next"
-  >
+
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+  
 </div>
