last commit completed website

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -150,6 +150,38 @@
   </section>
   {{!-- contact us section --}}
 
+
+  {{!-- about section start --}}
+  <section class="about_section py-5" id="about_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h3>About Us</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quaerat natus, ratione nemo aspernatur atque
+            numquam? Similique maxime illo dolor iure nemo impedit quas hic asperiores ratione doloribus, cum non?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A quaerat natus, ratione nemo aspernatur atque
+            numquam? Similique maxime illo dolor iure nemo impedit quas hic asperiores ratione doloribus, cum non?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A quaerat natus, ratione nemo aspernatur atque
+            numquam? Similique maxime illo dolor iure nemo impedit quas hic asperiores ratione doloribus, cum non?</p>
+       <button class="btn btn-success btn-lg">Contact Us</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  {{!-- about section start --}}
+
+  {{!-- footer section --}}
+  <footer class="footer py-5 text-center bg-dark text-white">
+    <div class="container ">
+      <div class="row">
+        <div class="col-md-12">
+          @ 2021 Copiright :  <span>This website is made for learning purpose</span>
+        </div>
+      </div>
+    </div>
+  </footer>
+  {{!-- footer section --}}
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
